--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,7 @@
 </header>
 <main>
     <div class="jumbotron">
-        <h4><%= tagLine %></h4>
-        <ul>
-            <% drinks.forEach(function (drink) { %>
-                <li><%= drink.name %> - <%= drink.drunkness %></li>
-            <% }); %>
-        </ul>
+        <h4>Remote logger by IftaLab</h4>
     </div>
 </main>
 
